[project]
name = "ahab-assistant-limbus-company"
description = "Ahab Assistant for Limbus Company: automation helper (GUI, OCR, tasks)."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "KIYI671" }]
keywords = ["limbus", "automation", "pyqt", "ocr", "game-assistant"]
requires-python = ">=3.12"
version = "1.0.9"

dependencies = [
    "pyside6>=6.9.2",
    "pyside6-fluent-widgets>=1.8.7",
    "pyuac~=0.0.3",
    "pywin32",
    "PyAutoGUI",
    "pynput",
    "pyperclip",
    "playsound3",
    "requests",
    "packaging",
    "markdown-it-py",
    "mdit-py-plugins",
    "linkify-it-py",
    "ruamel.yaml",
    "numpy",
    "opencv-python",
    "pillow",
    "psutil",
    "onnxruntime==1.20.1",
    "concurrent-log-handler>=0.9.28",
    "colorlog>=6.9.0",
    "rapidocr>=3.4.1",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0", "ruff>=0.13.1"]

[project.urls]
Homepage = "https://github.com/KIYI671/AhabAssistantLimbusCompany"
Source = "https://github.com/KIYI671/AhabAssistantLimbusCompany"
Issues = "https://github.com/KIYI671/AhabAssistantLimbusCompany/issues"

[tool.uv]
managed = true

# used by `pyside6-project lupdate`
[tool.pyside6-project]
files = [
    "main.py",
    "app/__init__.py",
    "app/my_app.py",
    "app/page_card.py",
    "app/setting_interface.py",
    "app/farming_interface.py",
    "app/tools_interface.py",
    "app/team_setting_card.py",
    "app/base_combination.py",
    "app/card/messagebox_custom.py",
    "app/base_tools.py",
    "app/language_manager.py",
    "module/update/check_update.py",
    "module/ALI/autoLangIdentification.py",
    "i18n/myapp_en.ts",
]
